Prepared the project for Java 9