@@ -22,6 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+		<maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
 
 		<junit.jupiter.version>5.0.0</junit.jupiter.version>
 		<junit.vintage.version>${junit.version}.0</junit.vintage.version>
@@ -120,19 +122,27 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>--add-modules java.xml.bind</jvmArguments>
+				</configuration>
 			</plugin>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId> 
-				<version>3.7.0</version> <configuration> <compilerArgs> <arg>(dash dash)add-modules</arg><arg>java.xml.bind</arg> 
-				</compilerArgs> <source>1.9</source> <target>1.9</target> <jdkToolchain> 
-				<version>9</version> </jdkToolchain> </configuration> </plugin> -->
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+			<!-- <plugin> 
+				<groupId>org.apache.maven.plugins</groupId> 
+				<artifactId>maven-compiler-plugin</artifactId> 
+				<configuration> 
+					<compilerArgs> 
+						<arg>add-modules</arg>
+						<arg>java.xml.bind,java.xml.ws.annotation</arg>
+					</compilerArgs> 
+					<jdkToolchain> 
+						<version>9</version> 
+					</jdkToolchain> 
+				</configuration> 
 			</plugin> -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
